# simple-self-supervised

./: .gitignore  LICENCE  README.md  environment.yml  pyproject.toml  requirements.txt
data/blobs/: test-set.csv  training-set.csv
data/spirals/: test-set.csv  training-set.csv
training/: experiment.old.py  experiment.py  experiment.sh  params.yml
training/tf_keras_transformer/: __init__.py  attention.py
