[tool.poetry]
name = "simple-self-supervised"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
scikit-learn = "^0.22.1"
typer = "^0.0.8"
imbalanced-learn = "^0.6.2"
torch = "^1.4.0"
torchvision = "^0.5.0"
dataget = "^0.4.1"
plotly = "^4.5.1"
dicto = "^0.1.0"
skorch = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
